fix: 🐛 Layout: set consistent padding and gaps in the 3-column and 4-column layouts

--- a/src/sass/components/_blocks.scss
+++ b/src/sass/components/_blocks.scss
@@ -12,7 +12,7 @@
 
   display: flex;
   flex-direction: column;
-  gap: 1.6em;
+  gap: 3.2rem;
 
   @include media($tablet) {
     flex-direction: row;
@@ -42,7 +42,7 @@
     flex-direction: row;
     background-color: #ebebeb;
     margin-bottom: 0;
-    padding: 0 1.6em 1em 1.6em;
+    padding: 2em 1.6em;
 
     .wrap {
       flex: 0 1 25%;
@@ -70,38 +70,14 @@
   }
 }
 
-
-
-.combined {
-
   .wrap {
-
-    @include media($mobile) {
-      padding: 1em;
-    }
-
-  }
-
-  &.light {
-    padding:0;
-  }
-
-}
-
-.separate {
-
-  .wrap {
-    padding: 1em;
-    @include media($mobile) {
-      padding: 0;
+    margin:0 0 1em 0;
+    
+    @include media($tablet) {
       margin:0 0 2em 0;
     }
-
   }
 
-
-
-}
 
 
 .list {
